--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,10 @@
     "strict": true,
     "skipLibCheck": true,
     "lib": [
-      "ESNext",
-      "DOM"
+      "ESNext"
     ],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx"
   },
+  "include": ["global.d.ts", "src", "worker-configuration.d.ts"],
 }
